feat(version): Blackbeard version (#49)
* feat(version): Add version command & API endpoint
